code/human_written_tests/WebAssembly/processed_control_flow_validation/test_br_19.wast
(assert_invalid
  (module (func $unbound-nested-label (block (block (br 5)))))
  "unknown label"
)